--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ang2-conduit",
+  "name": "angularDemoForCodacy",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -23,8 +23,10 @@
     "@angular/platform-browser": "7.2.4",
     "@angular/platform-browser-dynamic": "7.2.4",
     "@angular/router": "7.2.4",
+    "codacy-coverage": "^3.4.0",
     "core-js": "^2.4.1",
-    "marked": "^0.3.9",
+    "marked": "^0.7.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
@@ -32,7 +34,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "^7.3.1",
-    "@angular/compiler-cli": "7.2.4",
+    "@angular/compiler-cli": "^8.1.1",
     "@angular/language-service": "7.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -40,7 +42,7 @@
     "codelyzer": "^4.5.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
@@ -52,6 +54,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "3.2.4"
+    "typescript": "3.4.1"
   }
 }
