--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "marked": "^0.7.0",
     "mocha-lcov-reporter": "^1.3.0",
+    "remark-lint": "^6.0.5",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
