--- a/.remarkrc.json
+++ b/.remarkrc.json
@@ -4,7 +4,7 @@
       "table-pipes": false,
       "table-pipe-alignment": false,
       "maximum-line-length": 120,
-      "list-item-bullet-indent": false,
+      "list-item-bullet-indent": false
     }
   },
   "settings": {
