istanbul cover jasmine-node

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "ng lint --force",
     "e2e": "ng e2e",
     "codacy-coverage": "npm install codacy-coverage --save",
-    "test-with-coverage": "NODE_ENV=test app=1 mocha --require blanket --reporter mocha-lcov-reporter | codacy-coverage"
+    "test-with-coverage": "istanbul cover jasmine-node --captureExceptions spec/ && cat ./coverage/lcov.info | codacy-coverage && rm -rf ./coverage"
   },
   "pre-commit": [
     "lint"
